Fix: Correções para funcionar no Expo Go e web
- Adicionado polyfill crypto.getRandomValues
- Configurado react-native-reanimated corretamente
- Ajustado VolumeChart para usar victory (web compatível)
- Instalado dependências faltantes (react-native-worklets, @shopify/react-native-skia)
- Adicionado URI scheme para deep linking
- Criado assets (icon, splash, adaptive-icon)
- Configurado EAS Build para gerar APK
- Corrigido inputs de login/cadastro (pointerEvents)
- Melhorado RestTimerModal (botão fechar visível)

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "rx-training-app",
     "slug": "rx-training-app",
+    "scheme": "rxtrainingapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -31,6 +32,12 @@
     "plugins": [
       "expo-sqlite",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "3b99faf7-4197-46fc-ba28-5117489b2733"
+      }
+    },
+    "owner": "vroxo"
   }
 }
