--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "> Aplicativo mobile-first para periodização de treino e acompanhamento de evolução",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "start": "expo start --port 8085",
+    "android": "expo start --android --port 8085",
+    "ios": "expo start --ios --port 8085",
+    "web": "expo start --web --port 8085",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
@@ -20,6 +20,9 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
@@ -27,32 +30,34 @@
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "2.0.2",
+    "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.90.8",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.23",
+    "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-haptics": "~15.0.7",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "^3.0.8",
-    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0",
     "victory": "^37.3.6",
-    "victory-native": "^41.20.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
