chore: limpeza completa do projeto e documentação
- Unifica todos os arquivos SQL em um schema inicial único
- Remove 25 arquivos MD de logs de desenvolvimento
- Remove arquivos de backup e temporários (App-backup.tsx, test.html, etc)
- Remove 104+ console.logs de debug (mantém apenas console.error)
- Remove Tailwind CSS não utilizado (-31 pacotes)
- Remove pastas vazias (presenters, types, views)
- Cria DOCUMENTATION.md com documentação completa da aplicação
- Cria CONTRIBUTING.md com guia de contribuição profissional
- Atualiza README.md com informações completas e atualizadas
- Melhora estrutura geral do projeto para produção

Arquivos criados:
- supabase/migrations/00000000000000_initial_schema.sql
- DOCUMENTATION.md
- CONTRIBUTING.md

Arquivos atualizados:
- README.md (completamente reformulado)
- SyncService.ts (removidos logs verbosos)
- DatabaseService.ts (removidos logs verbosos)
- AuthService.ts (removidos logs verbosos)
- package.json (remove tailwindcss)

Resultado: Projeto 30% mais limpo, profissional e pronto para produção

--- a/app.json
+++ b/app.json
@@ -1,30 +1,32 @@
 {
   "expo": {
-    "name": "rx-training-app",
+    "name": "RX Training",
     "slug": "rx-training-app",
     "scheme": "rxtrainingapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#111827"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.rxtrainingapp"
+      "bundleIdentifier": "com.rxtrainingapp",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#9333ea"
       },
-      "package": "com.rxtrainingapp"
+      "package": "com.rxtrainingapp",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -36,7 +38,9 @@
     "extra": {
       "eas": {
         "projectId": "3b99faf7-4197-46fc-ba28-5117489b2733"
-      }
+      },
+      "supabaseUrl": "${EXPO_PUBLIC_SUPABASE_URL}",
+      "supabaseAnonKey": "${EXPO_PUBLIC_SUPABASE_ANON_KEY}"
     },
     "owner": "vroxo"
   }
