--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-native": "^0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -57,7 +57,6 @@
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0",
-    "victory": "^37.3.6",
     "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
@@ -69,7 +68,6 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.9.3"
   }
 }
