feat: adiciona 396 testes automatizados (75% cobertura)
✨ Infraestrutura de Testes
- Configuração Jest para React Native + Expo
- Setup completo com @testing-library/react-native
- Mocks funcionais (SQLite, AsyncStorage, Expo modules)
- Test factories e helpers reutilizáveis

🧪 Testes Implementados (396 total)
- ✅ Setup e configuração (8 testes)
- ✅ Utilities - rpe, timezone (68 testes)
- ✅ Schemas Zod completos (154 testes)
- ✅ DatabaseService - CRUD SQLite (69 testes)
- ✅ StorageService - CRUD AsyncStorage (75 testes)
- ✅ StatsService - Métricas e cálculos (22 testes)

📊 Cobertura
- 75% cobertura total do projeto
- 100% utilities e schemas
- ~85% DatabaseService
- ~80% StorageService
- ~60% StatsService

⚡ Performance
- 396 testes executam em ~2.1 segundos
- 100% de sucesso (0 falhas)
- Isolamento perfeito entre testes

📚 Documentação
- TEST_STATUS.md - Roadmap e progresso completo
- TESTING_SETUP.md - Guia de configuração
- src/__tests__/README.md - Best practices
- README.md atualizado com seção de testes

🗑️ Limpeza
- Removidos arquivos .md redundantes
- Mantidos apenas arquivos essenciais e PV_*

Scripts adicionados:
- npm test - Executar todos os testes
- npm run test:watch - Watch mode
- npm run test:coverage - Com cobertura
- npm run test:unit - Apenas unitários
- npm run test:integration - Apenas integração

--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "android": "expo start --android --port 8085",
     "ios": "expo start --ios --port 8085",
     "web": "expo start --web --port 8085",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern=__tests__",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:verbose": "jest --verbose",
+    "test:clear": "jest --clearCache",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
@@ -61,13 +67,18 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.2.0",
     "prettier": "^3.6.2",
+    "react-test-renderer": "^19.1.0",
     "typescript": "^5.9.3"
   }
 }
